--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <title>Home</title>
     <link type="text/css" href="stylesheet.css" rel="stylesheet" >
     <link href="http://fonts.cdnfonts.com/css/sf-new-republic?styles=10663" rel="stylesheet">    
-    <link href="http://fonts.cdnfonts.com/css/whois" rel="stylesheet">    
+    <link href="http://fonts.cdnfonts.com/css/whois" rel="stylesheet">
 </head>
   <body data-barba="wrapper">
 
@@ -29,29 +29,29 @@
           </nav>
       </header>
 
-      <main data-barba="container" data-barba-namespace="home">
-          <div class="center">
-              <h1>Stavros Gkatsis</h1>
+      <main data-barba="container" data-barba-namespace="contact">
+          <div id="contact" class="center">
+              <h1>Contact</h1>
               <br>
-              <h2>Welcome to my personal page. Please choose the desired section from the top.</h2>
           </div>
           <div class="group">
-            <div class="navy">
+            <div class="contact navy">
               <h2>Let's Connect</h2>
                 <a href="#"><img src="linked.png" style="filter: invert();"></a>
                 <a href="#"><img src="github.png" style="filter: invert();"></a>
                 <a href="#"><img src="fb.png" style="filter: invert();"></a>
             </div>
-            <div class="navy">
-              <h2>👍</h2>
-              <h2>Thanks for visiting!</h2>
+            <div class="navy contact">
+              <h2>✉️</h2>
+              <h2>stavrosga@hotmail.gr</h2>
             </div>
           </div>
       </main>
     </div>
 
     <script src="https://unpkg.com/@barba/core"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="https://unpkg.com/gsap@latest/dist/gsap.min.js"></script>
     <script src="index.js"></script>
+
   </body>
 </html>
