Correct url for JS scripts

--- a/treasure-game/en/index.html
+++ b/treasure-game/en/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Geology And Earthquakes Quiz</title>
     <meta name="Description" CONTENT="Δοκιμάστε τις γνώσεις σας στη γεωλογία και τους σεισμούς μέσα από ένα μικρό κυνήγι θησαυρού. Test your knowledge in geology and earthquakes through this small treasure hunt game. Από Σταύρος Γκάτσης">
-    <link rel="shortcut icon" href="/icons/icons/png/icon.png">
+    <link rel="shortcut icon" href="../icons/icons/png/icon.png">
     <meta charset="utf-8">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -312,7 +312,6 @@ $(function () {
 </script>
 
 <footer>
-    <a href="https://www.buymeacoffee.com/stavrosga" target="_blank"><button type="button" class="btn btn-warning">☕️ Buy me a coffee</button> </a>
     <span><a href="../">Ελληνικά </a> | <span data-toggle="tooltip" data-placement="top" title data-original-title="Some graphics were made by Freepik, Flaticon. Background Music: Lobby Time by Kevin MacLeod (incompetech.com)">&#9432;</span> | A Game From Stavros Gkatsis. | Return to <a href="stavrosga.com">stavrosga.com</a> &nbsp;&nbsp;&nbsp; </span>
 </footer>
 </body>
