--- a/treasure-game/index.html
+++ b/treasure-game/index.html
@@ -313,7 +313,7 @@ $(function () {
 
 <footer>
     <a href="https://stavrosga.com" target="_blank"><button type="button" class="btn btn-warning">☕️ Return to stavrosga.com</button> </a>
-    <span><a href="treasure-game/en/">English </a> | <span data-toggle="tooltip" data-placement="top" title data-original-title="Some graphics were made by Freepik, Flaticon. Background Music: Lobby Time by Kevin MacLeod (incompetech.com)">&#9432;</span> | A Game From Stavros Gkatsis. | &nbsp;&nbsp;&nbsp; </span>
+    <span><a href="./en/">English </a> | <span data-toggle="tooltip" data-placement="top" title data-original-title="Some graphics were made by Freepik, Flaticon. Background Music: Lobby Time by Kevin MacLeod (incompetech.com)">&#9432;</span> | A Game From Stavros Gkatsis. | &nbsp;&nbsp;&nbsp; </span>
 </footer>
 </body>
 </html>
