--- a/treasure-game/en/index.html
+++ b/treasure-game/en/index.html
@@ -315,5 +315,8 @@ $(function () {
     <a href="https://stavrosga.com" target="_blank"><button type="button" class="btn btn-warning">☕️ Return to stavrosga.com</button> </a>
     <span><a href="../">Ελληνικά </a> | <span data-toggle="tooltip" data-placement="top" title data-original-title="Some graphics were made by Freepik, Flaticon. Background Music: Lobby Time by Kevin MacLeod (incompetech.com)">&#9432;</span> | A Game From Stavros Gkatsis. | &nbsp;&nbsp;&nbsp; </span>
 </footer>
+<script src="https://unpkg.com/@barba/core"></script>
+<script src="https://unpkg.com/gsap@latest/dist/gsap.min.js"></script>
+<script src="../../index.js"></script>
 </body>
 </html>
