--- a/work.html
+++ b/work.html
@@ -43,7 +43,7 @@
               <h5>Grid design</h5><br>
               <h5>Simple and subtle animations</h5><br>
               <h5>Smooth navigation bar</h5><br><br>
-              <a href="./templates/eugenes-renovations">Preview</a>
+              <a href="templates/eugenes-renovations">Preview</a>
             </div>
             <div class="navy pic">
               <img class="thumb" src="media/eugene-thumb.jpeg"/>
@@ -57,10 +57,10 @@
                   Bootstrap<br>
                   Questions made in collaboration with a teacher/friend
               </h5><br><br>
-              <a href="./game/">Preview</a>
+              <a href="./treasure-game/">Preview</a>
             </div>
             <div class="navy pic">
-              <img class="thumb" src=""/>
+              <img class="thumb" src="media/treasure-thumb.jpeg"/>
             </div>
           </div>
           <div class="group">
