--- a/treasure-game/index.html
+++ b/treasure-game/index.html
@@ -15,7 +15,9 @@ integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNm
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
-<body> <h1 style="display: none;">Geology And Earthquakes Quiz</h1> <br><br>
+<body data-barba="wrapper"> 
+
+    <h1 style="display: none;">Geology And Earthquakes Quiz</h1> <br><br>
     <script>
         window.jQuery = window.$ = require('jquery');
     </script>
@@ -315,5 +317,8 @@ $(function () {
     <a href="https://stavrosga.com" target="_blank"><button type="button" class="btn btn-warning">☕️ Return to stavrosga.com</button> </a>
     <span><a href="./en/">English </a> | <span data-toggle="tooltip" data-placement="top" title data-original-title="Some graphics were made by Freepik, Flaticon. Background Music: Lobby Time by Kevin MacLeod (incompetech.com)">&#9432;</span> | A Game From Stavros Gkatsis. | &nbsp;&nbsp;&nbsp; </span>
 </footer>
+<script src="https://unpkg.com/@barba/core"></script>
+<script src="https://unpkg.com/gsap@latest/dist/gsap.min.js"></script>
+<script src="../index.js"></script>
 </body>
 </html>
