fixed more broken URLs

--- a/work.html
+++ b/work.html
@@ -57,7 +57,7 @@
                   Bootstrap<br>
                   Questions made in collaboration with a teacher/friend
               </h5><br><br>
-              <a href="./treasure-game/">Preview</a>
+              <a href="https://stavrosga.com/treasure-game">Preview</a>
             </div>
             <div class="navy pic">
               <img class="thumb" src="media/treasure-thumb.jpeg"/>
