--- a/contact.html
+++ b/contact.html
@@ -35,13 +35,13 @@
               <br>
           </div>
           <div class="group">
-            <div class="contact navy">
+            <div id="contactsec" class="navy">
               <h2>Let's Connect</h2>
-                <a href="#"><img src="linked.png" style="filter: invert();"></a>
-                <a href="#"><img src="github.png" style="filter: invert();"></a>
-                <a href="#"><img src="fb.png" style="filter: invert();"></a>
+                <div><a id="contactlink" href="#"><img src="media/linked.png" style="filter: invert();"></a></div>
+                <div><a id="contactlink" href="#"><img src="media/github.png" style="filter: invert();"></a></div>
+                <div><a id="contactlink" href="#"><img src="media/fb.png" style="filter: invert();"></a></div>
             </div>
-            <div class="navy contact">
+            <div id="contact" class="navy contact">
               <h2>✉️</h2>
               <h2>stavrosga@hotmail.gr</h2>
             </div>
