--- a/treasure-game/en/index.html
+++ b/treasure-game/en/index.html
@@ -312,7 +312,7 @@ $(function () {
 </script>
 
 <footer>
-    <a href="https://stavrosga.com" target="_blank"><button type="button" class="btn btn-warning">☕️ Return to stavrosga.com</button> </a>
+    <a href="https://stavrosga.com"><button type="button" class="btn btn-warning">☕️ Return to stavrosga.com</button> </a>
     <span><a href="../">Ελληνικά </a> | <span data-toggle="tooltip" data-placement="top" title data-original-title="Some graphics were made by Freepik, Flaticon. Background Music: Lobby Time by Kevin MacLeod (incompetech.com)">&#9432;</span> | A Game From Stavros Gkatsis. | &nbsp;&nbsp;&nbsp; </span>
 </footer>
 
