--- a/treasure-game/index.html
+++ b/treasure-game/index.html
@@ -3,7 +3,6 @@
 <head>
     <title>Geology And Earthquakes Quiz</title>
     <meta name="Description" CONTENT="Δοκιμάστε τις γνώσεις σας στη γεωλογία και τους σεισμούς μέσα από ένα μικρό κυνήγι θησαυρού. Test your knowledge in geology and earthquakes through this small treasure hunt game. Από Σταύρος Γκάτσης">
-    <link rel="shortcut icon" href="./icons/icons/png/icon.png">
     <meta charset="utf-8">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -15,9 +14,8 @@ integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNm
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
-<body data-barba="wrapper"> 
-
-    <h1 style="display: none;">Geology And Earthquakes Quiz</h1> <br><br>
+<body>
+    <h1 class="transition" style="display: none;">Geology And Earthquakes Quiz</h1> <br><br>
     <script>
         window.jQuery = window.$ = require('jquery');
     </script>
@@ -314,7 +312,7 @@ $(function () {
 </script>
 
 <footer>
-    <a href="https://stavrosga.com" target="_blank"><button type="button" class="btn btn-warning">☕️ Return to stavrosga.com</button> </a>
+    <a href="https://stavrosga.com"><button type="button" class="btn btn-warning">☕️ Return to stavrosga.com</button> </a>
     <span><a href="./en/">English </a> | <span data-toggle="tooltip" data-placement="top" title data-original-title="Some graphics were made by Freepik, Flaticon. Background Music: Lobby Time by Kevin MacLeod (incompetech.com)">&#9432;</span> | A Game From Stavros Gkatsis. | &nbsp;&nbsp;&nbsp; </span>
 </footer>
 
