--- a/contact.html
+++ b/contact.html
@@ -37,9 +37,9 @@
           <div class="group">
             <div id="contactsec" class="navy">
               <h2>Let's Connect</h2>
-                <div><a id="contactlink" href="#"><img src="media/linked.png" style="filter: invert();"></a></div>
-                <div><a id="contactlink" href="#"><img src="media/github.png" style="filter: invert();"></a></div>
-                <div><a id="contactlink" href="#"><img src="media/fb.png" style="filter: invert();"></a></div>
+                <div><a id="contactlink" href="https://www.linkedin.com/in/stavros-gkatsis/" target="_blank"><img src="media/linked.png" style="filter: invert();"></a></div>
+                <div><a id="contactlink" href="https://www.codecademy.com/profiles/stavrosgatsis" target="_blank"><img src="media/codecademy.png" style="filter: invert();"></a></div>
+                <div><a id="contactlink" href="https://www.facebook.com/stavros.gatsis/" target="_blank"><img src="media/fb.png" style="filter: invert();"></a></div>
             </div>
             <div id="contact" class="navy contact">
               <h2>✉️</h2>
