--- a/work.html
+++ b/work.html
@@ -57,11 +57,7 @@
                   Bootstrap<br>
                   Questions made in collaboration with a teacher/friend
               </h5><br><br>
-<<<<<<< HEAD
               <a href="./treasure-game/" target="_blank">Preview</a>
-=======
-              <a href="https://stavrosga.com/treasure-game">Preview</a>
->>>>>>> f775cd59ffda814fa9f6f11f624fdc7a736da62d
             </div>
             <div class="navy pic">
               <img class="thumb" src="media/treasure-thumb.jpeg"/>
@@ -75,10 +71,9 @@
                   CSS Animations<br>
                   Responsive
               </h5><br><br>
-              <a href="./game/">Preview</a>
             </div>
             <div class="navy pic">
-              <img class="thumb" src=""/>
+              <h5>Coming Soon</h5>
             </div>
           </div>
       </main>
