--- a/treasure-game/en/index.html
+++ b/treasure-game/en/index.html
@@ -225,7 +225,7 @@ integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNm
                         <img data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="../styles/a.svg" class="player"/>
                         <div class="dropdown-menu">
                             <h1>Question #1</h1><br>
-                            <h2>When the lithospheric plates collide then:</h2><br>
+                            <h2>When the lithospheric plates collide then the creation of _ occurs:</h2><br>
                             <button type="button" class="btn btn-primary correct opt1">A Volcano</button>
                             <button type="button" class="btn btn-primary incorrect opt2">An Earthquake</button>
                             <button type="button" class="btn btn-primary incorrect opt3">An Island</button>
