--- a/work.html
+++ b/work.html
@@ -53,8 +53,11 @@
             <div class="navy">
               <h2>Geology Quiz</h2>
               <h3 style="background:white">Treasure game with geology related questions</h3>
-              <h5>jQuery<br>
-                  Bootstrap<br>
+              <h5>Seemingly outdated tech is always more powerful than what people deem it to be.<br>
+                <ul>
+                  <li>jQuery</li>
+                  <li>Bootstrap</li>
+                </ul>
               </h5><br><br>
               <a href="./treasure-game/" target="_blank">Preview</a>
             </div>
