--- a/work.html
+++ b/work.html
@@ -52,7 +52,7 @@
           <div class="group">
             <div class="navy">
               <h2>Geology Quiz</h2>
-              <h3 style="background:white">Treasure game with geology related questions</h3>
+              <h3 style="background:white">A small quiz/game with geology related questions</h3>
               <h5>Seemingly outdated tech is always more powerful than what people deem it to be.<br>
                 <ul>
                   <li>jQuery</li>
