--- a/work.html
+++ b/work.html
@@ -39,10 +39,14 @@
             <div class="navy">
               <h2>Eugene's Renovations</h2>
               <h3 style="background:white">Simple landing page template</h3>
-              <h5>Responsive to the viewport</h5><br>
-              <h5>Grid design</h5><br>
-              <h5>Simple and subtle animations</h5><br>
-              <h5>Smooth navigation bar</h5><br><br>
+              <h5>
+                <ol>
+                  <li>Responsive to the viewport</li>
+                  <li>Grid design</li>
+                  <li>Simple and subtle animations</li>
+                  <li>Smooth navigation bar</li><br><br>
+                </ol>
+              </h5>
               <a href="templates/eugenes-renovations" target="_blank">Preview</a>
             </div>
             <div class="navy pic">
@@ -54,10 +58,10 @@
               <h2>Geology Quiz</h2>
               <h3 style="background:white">A small quiz/game with geology related questions</h3>
               <h5>Seemingly outdated tech is always more powerful than what people deem it to be.<br>
-                <ul>
+                <ol>
                   <li>jQuery</li>
                   <li>Bootstrap</li>
-                </ul>
+                </ol>
               </h5><br><br>
               <a href="./treasure-game/" target="_blank">Preview</a>
             </div>
