--- a/work.html
+++ b/work.html
@@ -63,7 +63,7 @@
                   <li>Bootstrap</li>
                 </ol>
               </h5><br><br>
-              <a href="./treasure-game/" target="_blank">Preview</a>
+              <a href="https://geoquiz.xyz" target="_blank">Preview</a>
             </div>
             <div class="navy pic">
               <img class="thumb" src="media/treasure-thumb.jpeg"/>
