--- a/treasure-game/index.html
+++ b/treasure-game/index.html
@@ -312,8 +312,8 @@ $(function () {
 </script>
 
 <footer>
-    <a href="https://stavrosga.com"><button type="button" class="btn btn-warning">☕️ Return to stavrosga.com</button> </a>
-    <span><a href="./en/">English </a> | <span data-toggle="tooltip" data-placement="top" title data-original-title="Some graphics were made by Freepik, Flaticon. Background Music: Lobby Time by Kevin MacLeod (incompetech.com)">&#9432;</span> | A Game From Stavros Gkatsis. | &nbsp;&nbsp;&nbsp; </span>
+    <a href="https://stavrosga.com"><button type="button" class="btn btn-warning">☕️ Return</button> </a>
+    <span><a href="./en/">English </a> | <span data-toggle="tooltip" data-placement="top" title data-original-title="Some graphics were made by Freepik, Flaticon. Background Music: Lobby Time by Kevin MacLeod (incompetech.com)">&#9432;</span> | A Game From Eleni Gkatsi. | &nbsp;&nbsp;&nbsp; </span>
 </footer>
 
 </body>
